<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BATTLESHIP</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="play_button_1">Solo Play</string>
    <string name="play_button_2">Multiplayer</string>
    <string name="title_activity_game_versus_ai">Versus AI</string>
    <string name="title_activity_game_versus_player">Versus Player</string>
    <string name="title_activity_setup_game_board">Game Setup</string>
    <string name="setup_select_bar_string">Select Ship</string>
    <string name="change_orientation_button_string">Change Orientation</string>
    <string name="setup_ready_string">Ready</string>
    <string name="game_status_string">Status</string>
    <string name="button_fire_string">FIRE</string>
    <string name="title_activity_loading_screen">Loading Screen</string>
    <string name="loading_string">LOADING...</string>
    <string name="remove_string">Remove</string>
    <string name="title_activity_connect_to_host">Connect</string>
    <string name="label_ip">IP:</string>
    <string name="label_port">Port:</string>
    <string name="connect_button_string">Connect</string>
    <string name="title_activity_winner_screen">Game Over</string>
    <string name="winner_string">You Win</string>
    <string name="loser_string">You Lost</string>
    <string name="return_to_menu">Return to Main Menu</string>

</resources>
